--- a/ticket_chat.html
+++ b/ticket_chat.html
@@ -812,7 +812,7 @@
         const talkToHuman = document.getElementById('talkToHuman');
 
         // Replace with your own Groq API key
-        const GROQ_API_KEY = "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";
+        const GROQ_API_KEY = "";
 
         async function askGroq(message) {
             try {
@@ -932,4 +932,5 @@
         });
     </script>
 </body>
+
 </html>
